k8s/go-app-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  replicas: 2  # Number of replicas
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app-container
        image: niveshsunny/go-app:latest  
        ports:
        - containerPort: 8080
