k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx       # class name has been looked by the ingress controller.
  rules:
  - host: go-app.niveshsunny.com #only accepts the request if the use hits the host name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-app
            port:
              number: 80
